orm-tests/tests/snapshots/query_ifelse__if_else_statement_and_let_with_block_macro-4.snap
---
source: orm-tests/tests/query_ifelse.rs
expression: query_result_1.fine_tune_params()
---
SELECT * FROM {
LET $val = $_param_00000001;

LET $oye_name = $_param_00000002;

LET $select_space_ship = $_param_00000003;

LET $cond = $_param_00000004;

RETURN $cond;
};
