orm-tests/tests/snapshots/query_ifelse__if_else_statement_and_let_with_block_macro-6.snap
---
source: orm-tests/tests/query_ifelse.rs
expression: queries_2.fine_tune_params()
---
{
LET $val = $_param_00000001;

LET $oye_name = $_param_00000002;

RETURN {
RETURN $_param_00000003;
};
}
