orm-tests/tests/snapshots/query_ifelse__if_else_statement_and_let_with_block_macro.snap
---
source: orm-tests/tests/query_ifelse.rs
expression: queries_1.to_raw().build()
---
{
LET $val = 7;

LET $oye_name = 'Oyelowo';

LET $select_space_ship = (SELECT * FROM space_ship ORDER BY name DESC);

IF $val > 5 
	{ RETURN $select_space_ship; }
ELSE IF $oye_name = 'Oyelowo' 
	{ RETURN (SELECT * FROM weapon ORDER BY strength DESC); }
ELSE
	{ LET $x = 2505;

RETURN $x; }

RETURN 55;
}
